yahya-assignment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yahya-assignment-service
spec:
  type: ClusterIP
  selector:
    app: yahya-assignment-deployment
  ports:
    - port: 80
      targetPort: 5000
